--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -2,11 +2,11 @@
 layout: default
 modal-id: 1
 date: 2014-07-18
-img: cabin.png
+img: headphones.png
 alt: image-alt
-project-date: April 2014
-client: Start Bootstrap
+project-date: December 2014
+client: General Assembly
 category: Web Development
-description: Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!
+description: <a href="https://project1-feedback.herokuapp.com/" target="_blank" data-tooltip="Click on image to go to website"><img src="http://imageshack.com/a/img910/3126/PZQ91T.png" id="center" ></a><br><br>For the first project of our course I chose to build a music app. The initial scope was to upload music and comment on tracks, and then add anything else to it if we had time. The web page was made with Ruby on Rails, Html, CSS and Foundation.
 
 ---
